fix paddind content wrap

--- a/homework_6/css/task.css
+++ b/homework_6/css/task.css
@@ -12,7 +12,7 @@
   max-width: 1392px;
 }
 .hero-wrap {
-  padding: 114px 130px 0 0;
+  padding: 114px 145px 110px 15px;
 }
 .hero-text-content {
   text-align: start;
